[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/estagios/EstagioTemplate.gd" type="Script" id=1]
[ext_resource path="res://cenas/jogador/ComponenteJogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://recursos/tileSets/BlocosTemporarios.tres" type="TileSet" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Cena" type="Node2D"]
script = ExtResource( 1 )

[node name="Jogadores" type="Node2D" parent="."]

[node name="Player1" parent="Jogadores" instance=ExtResource( 2 )]
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TileMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( 0, 34, 0, 1, 34, 0, 65536, 34, 0, 65537, 34, 0 )

[node name="Gatilhos" type="Node2D" parent="."]

[node name="zIndex" type="Node2D" parent="Gatilhos"]

[node name="menos1" type="Area2D" parent="Gatilhos/zIndex"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/zIndex/menos1"]
position = Vector2( 1, 67 )
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 0, 75, 70, 37, 95, 37, 0, 89 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/zIndex/menos1"]
position = Vector2( 1, 67 )
rotation = -3.14159
polygon = PoolVector2Array( 0, 75, 74, 36, 97, 36, 0, 89 )

[node name="1" type="Area2D" parent="Gatilhos/zIndex"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/zIndex/1"]
polygon = PoolVector2Array( -64, 33, 0, 0, 65, 33, 0, 64 )

[node name="Nivelacao" type="Node2D" parent="Gatilhos"]

[node name="0" type="Area2D" parent="Gatilhos/Nivelacao"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Nivelacao/0"]
polygon = PoolVector2Array( -64, 33, 0, 0, 65, 33, 0, 64 )

[node name="Queda" type="Area2D" parent="Gatilhos/Nivelacao"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Gatilhos/Nivelacao/Queda"]
position = Vector2( 0.799995, -3.59999 )
polygon = PoolVector2Array( 0, 75, 72.2, 36.6, 95.2, 36.6, 0, 89 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Gatilhos/Nivelacao/Queda"]
position = Vector2( 0.799995, -3.59999 )
rotation = 3.14159
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 0, 75, 73.8, 37.6, 96.8, 38.6, 0, 89 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Nivelacao/Queda"]
position = Vector2( 1, 67 )
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 0, 75, 70, 37, 95, 37, 0, 89 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Gatilhos/Nivelacao/Queda"]
position = Vector2( 1, 67 )
rotation = 3.14159
polygon = PoolVector2Array( 0, 75, 74, 36, 97, 36, 0, 89 )

[node name="Respawn" type="Node2D" parent="Gatilhos"]

[node name="Respawn" type="Area2D" parent="Gatilhos/Respawn"]
position = Vector2( 0, 1300 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gatilhos/Respawn/Respawn"]
scale = Vector2( 1000, 10 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Gatilhos/zIndex/menos1" to="." method="mudarZIndex" binds= [ -1 ]]
[connection signal="body_entered" from="Gatilhos/zIndex/1" to="." method="mudarZIndex" binds= [ 1 ]]
[connection signal="body_entered" from="Gatilhos/Nivelacao/0" to="." method="mudarPosicaoChao" binds= [ Vector2( 0, 0 ) ]]
[connection signal="body_entered" from="Gatilhos/Nivelacao/Queda" to="." method="mudarPosicaoChao" binds= [ Vector2( 0, 300000 ) ]]
[connection signal="body_entered" from="Gatilhos/Respawn/Respawn" to="." method="respawnar" binds= [ Vector2( 0, 0 ) ]]
